# docker-dev

./: .dockerignore  .gitignore  AGENTS.md  README.md  Taskfile.yml  note.md  systemctl.py
.github/workflows/: base.yml  dev.yml  docker-base.yml  docker-cpp.yml  docker-front.yml  docker-golang.yml  docker-i3.yml  docker-kde.yml  docker-latex.yml  docker-python.yml  docker-rust.yml  docker-typst.yml  docker.yml  golang.yml
assets/claude/: settings.json
assets/sshd/: ssh_host_ed25519_key
base/: Dockerfile  docker-compose.yml
coding/: Dockerfile
cpp/: Dockerfile
csharp/: Dockerfile
dev/: Dockerfile  compose.yaml
dind/: Dockerfile  entrypoint
docs/examples/exp4/: compose.yaml  pyproject.toml
entrypoint/: Dockerfile  Procfile  code-server-config-template.yaml  docker-compose.yml  go.mod  go.sum  main.go  note.md
front/: Dockerfile
golang/: Dockerfile  docker-compose.yml
i3/: Dockerfile
java/: Dockerfile
kde/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
latex/: Dockerfile
public/: .p10k.zsh  arch_init.sh  download_vscode_server.sh  i3_init.sh  i3_start.sh  init.sh  install_vsc_ext.py  kde-start.sh  kde_init.sh  kde_start.sh  pacman.conf  set_go.sh  set_mirror.sh  set_zsh.sh  vsc_init.sh  xstartup
python/: Dockerfile
rust/: Dockerfile  cargo_config
scripts/: .zshrc  1.py  arch_init.sh  config.fish  download_vscode_server.sh  entrypoint.py  entrypoint.sh  kde_init.sh  set_go.sh  set_zsh.sh  vsc_server_setup.py
test/: 1.tmp.md  Dockerfile  README.md  entrypoint.sh  vsc_server_setup.sh
typst/: Dockerfile
(+98 files in other folders)
